<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".verifica1.ActivityVerifica1">

    <!--HEAD SECTION-->
    <TextView
        android:id="@+id/HeadTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        android:textSize="40sp"

        android:text="@string/textHead"
        android:textAlignment="center"
        />

    <!--INPUT SECTION-->

    <!--бесконечно нажимается enter-->

    <EditText
        android:id="@+id/InputEditText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/HeadTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25sp"
        android:textSize="20sp"
        android:ems="10"

        android:hint="@string/textHint1"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/InputEditText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/InputEditText1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:textSize="20sp"
        android:ems="10"

        android:hint="@string/textHint2"
        android:inputType="number"
        />


    <!--MIDDLE SECTION-->
    <TextView
        android:id="@+id/MiddleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/InputEditText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80sp"
        android:text="@string/textMiddle"

        android:textAlignment="center"
        android:textSize="20sp"
        />


    <!--LOWER SECTION-->
    <Button
        android:id="@+id/ExitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20sp"

        android:text="@string/textExit"
        />

</RelativeLayout>